fix: added css to hide scrollbar

--- a/src/modules/10-common/navigation/MainNav/MainNav.module.scss
+++ b/src/modules/10-common/navigation/MainNav/MainNav.module.scss
@@ -48,6 +48,22 @@
       background: var(--modules-container-bg);
       border-bottom: 1px solid var(--modules-container-border);
       border-top: 1px solid var(--modules-container-border);
+      &::-webkit-scrollbar {
+        width: 5px;
+      }
+
+      &::-webkit-scrollbar-track {
+        background: transparent;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        background: rgb(196, 196, 196);
+        border-radius: 5px;
+      }
+
+      &::-webkit-scrollbar-thumb:hover {
+        background: var(--grey-350);
+      }
     }
   }
 
